# ctower

./: .gitignore  Makefile  README.md  curses-colors.py  pyproject.toml  sandbox-ctower.ipynb  setup.cfg
.ipynb_checkpoints/: sandbox-ctower-checkpoint.ipynb
ctower/: main.py
ctower/lib/: elements.py  entities.py  settings.py
tests/: test_main.py
