[metadata]
name = curses-tower
version = 0.1
description = Curses Defense Tower
long_description = Curses Defense Tower
license = UNLICENCE
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
install_requires =
    playsound==1.3.0

[options.package_data]
ctower.assets = *.wav, *.mp3

[options.entry_points]
# Optional, but if you want to keep it,
# make sure you have a function called
# main() in ctower.main!
console_scripts =
    ctower = ctower.main:start
